src/sass/components/_blogs.scss
.blog {
  &-body {
    display: grid;
    grid-template-columns: 80% auto;
    gap: 3rem;

    @media (width <= 1280px) {
      grid-template-columns: 75% auto;
      gap: 2.5rem;
    }

    @media (width <= 884px) {
      gap: 2rem;
    }

    @media (width <= 640px) {
      display: block;
    }
  }

  &-section {
    display: grid;
    gap: 2rem;

    @media (width <= 1280px) {
      gap: 1.8rem;
    }

    @media (width <= 884px) {
      gap: 3rem;
    }

    @media (width <= 640px) {
      gap: 4rem;
    }
  }

  &-lastBlog {
    border-bottom: 1px solid var(--border-tertiary);
    padding-bottom: 2rem;

    @media (width <= 640px) {
      padding-bottom: 3rem;
    }

    &-card {
      background-color: var(--bg-secondary);
      padding: 1rem 1rem 1rem 1.2rem;

      display: grid;
      gap: 2rem;
      grid-template-columns: 47% auto;
      border: 1px dashed var(--border-secondary);

      @media (width <= 640px) {
        padding: 1.2rem;
        grid-template-columns: none;
      }

      &:hover {
        background-color: transparent;
        border: 1px dashed var(--text-primary);

        & h1 {
          text-decoration: underline;
        }
      }

      & div {
        & span {
          font-size: 0.8rem;
          color: var(--text-tertiary);
        }

        & h1 {
          margin-top: 0.4rem;
          font-size: 1.8rem;
          font-weight: 600;
          color: var(--text-primary);

          display: -webkit-box;
          line-clamp: 2;
          -webkit-line-clamp: 2;
          -webkit-box-orient: vertical;
          overflow: hidden;

          @media (width <= 1280px) {
            font-size: 1.5rem;
          }

          @media (width <= 884px) {
            font-size: 1.2rem;
          }

          @media (width <= 640px) {
            font-size: 1.5rem;
          }
        }

        & p {
          margin-block: 1rem 2rem;
          color: var(--text-secondary);

          display: -webkit-box;
          line-clamp: 3;
          -webkit-line-clamp: 3;
          -webkit-box-orient: vertical;
          overflow: hidden;
        }
      }

      & img {
        height: 100%;

        @media (width <= 640px) {
          height: auto;
        }
      }
    }
  }

  &-list {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 2rem;
    row-gap: 4rem;
    list-style: none;
    padding: 0;
    margin: 0;

    @media (width <= 1280px) {
      grid-template-columns: repeat(2, 1fr);
      column-gap: 1.3rem;
      row-gap: 3rem;
    }

    @media (width <= 640px) {
      grid-template-columns: 1fr;
    }

    &-section {
      display: grid;
      gap: 2rem;

      @media (width <= 640px) {
        gap: 3rem;
      }
    }
  }

  &-list__item {
    display: flex;
  }

  &-card {
    padding: 0.9rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    width: 100%;
    text-decoration: none;
    color: inherit;
    overflow: hidden;
    border: 1px dashed transparent;

    transition: border 0.1s ease-in-out;

    &:hover {
      border: 1px dashed var(--text-primary);
      background-color: transparent;

      .blog-card__title,
      .blog-card__link {
        text-decoration: underline;
      }
    }
  }

  &-card__media {
    position: relative;
    overflow: hidden;
  }

  &-card__cover {
    width: 100%;
    height: 15rem;
    object-fit: cover;
    object-position: center;
    display: block;

    @media (width <= 1280px) {
      height: 13rem;
    }

    @media (width <= 884px) {
      height: 10rem;
    }

    @media (width <= 640px) {
      height: 14rem;
    }

    @media (width <= 400px) {
      height: 13.5rem;
    }

    @media (width <= 330px) {
      height: 11rem;
    }
  }

  &-card__overlay {
    background: rgb(114 113 113 / 16%);
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    border-top: 1px solid rgba(255, 255, 255, 0.2);

    display: flex;
    align-items: center;
    justify-content: space-between;

    position: absolute;
    bottom: -0.2%;
    width: 100%;

    padding: 0.7rem 1rem;
    pointer-events: none;
  }

  &-card__author--overlay {
    font-size: 0.75rem;
    font-weight: 500;
    opacity: 0.95;
  }

  &-card__content {
    display: flex;
    flex-direction: column;
    gap: 0.8rem;

    @media (width <= 640px) {
      gap: 1rem;
    }
  }

  &-card__meta,
  &-card__footer {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0.75rem;
  }

  &-card__category,
  &-card__date,
  &-card__link {
    font-size: 0.75rem;
    color: var(--text-tertiary);
  }

  &-card__overlay .blog-card__category,
  &-card__overlay .blog-card__date,
  &-card__overlay {
    color: white;
    text-shadow: 0 1px 3px rgb(0 0 0 / 0.55);
  }

  &-card__title {
    font-size: 1.2rem;
    font-weight: 600;
    color: var(--text-primary);
    line-height: 1.4;

    @media (width <= 1280px) {
      font-size: 1rem;
    }
  }

  &-card__description {
    font-size: 0.9rem;
    line-height: 1.54;
    color: var(--text-tertiary);

    display: -webkit-box;
    line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;

    @media (width <= 640px) {
      font-size: 0.97rem;
    }
  }

  &-card__link {
    color: var(--text-primary);
    font-weight: 500;

    display: flex;
    align-items: center;
    gap: 0.3rem;

    & svg {
      margin-top: 0.1rem;
      width: 0.8rem;
      height: 0.8rem;
    }
  }

  &-aside {
    display: flex;
    flex-direction: column;
    gap: 1.1rem;
    position: sticky;
    top: 5%;
    height: fit-content;

    @media (width <= 884px) {
      top: 2%;
    }

    @media (width <= 640px) {
      display: none;
    }

    & h3 {
      font-family: "Antonio", sans-serif;
      font-weight: 600;
      font-size: 1.2rem;
      text-transform: uppercase;
      border-bottom: 1px dashed var(--border-primary);
      padding-bottom: 0.4rem;
      color: var(--text-primary);
    }

    & ul {
      display: grid;
      gap: 0.5rem;

      & li {
        font-size: 0.87rem;
        color: var(--text-tertiary);
        cursor: pointer;

        &.active {
          color: var(--text-primary);
          font-weight: 500;
          text-decoration: line-through;
        }

        &:hover {
          color: var(--text-primary);
        }
      }
    }
  }
}

.verticalBlogs {
  display: grid;

  & a {
    display: flex;
    align-items: center;
    justify-content: space-between;
    transition: all 0.1s ease-in;

    &:not(:last-child) {
      border-bottom: 1px solid var(--border-tertiary);
    }

    padding-block: 1rem;

    & article {
      display: grid;
      grid-template-columns: 6rem auto;
      gap: 1rem;

      @media (width <= 640px) {
        grid-template-columns: 5rem auto;
        padding-right: 0.3rem;
      }

      & p,
      & h3 {
        font-size: 1.2rem;

        @media (width <= 1280px) {
          font-size: 1rem;
        }
      }

      & p,
      & span {
        color: var(--text-tertiary);
      }

      & div {
        display: grid;
        gap: 0.4rem;

        & h3 {
          color: var(--text-primary);
          font-weight: 500;

          @media (width <= 640px) {
            line-height: 1.66rem;
          }
        }

        & span {
          font-size: 0.875rem;
        }
      }
    }

    & svg {
      width: 0.87rem;
      height: 0.87rem;
      opacity: 0;
      transition: all 0.1s ease-in;

      @media (width <= 640px) {
        display: none;
      }
    }

    &:hover {
      border-bottom-color: var(--text-primary);

      & svg {
        opacity: 1;
      }
    }

    &:last-child:hover {
      border-bottom: 1px solid white;
    }
  }
}

